#pragma once

#include "esphome/components/number/number.h"
#include "esphome/core/component.h"
#include "esphome/core/preferences.h"

namespace esphome {
namespace number {

class PersistedNumber : public number::Number, public Component {
 public:
  float get_setup_priority() const override { return setup_priority::HARDWARE; }
  void set_restore_value(bool restore) { this->restore_value_ = restore; }
  void set_default_value(float value) { this->default_value_ = value; }
  void setup() override;

 protected:
  void control(float value) override;

  bool restore_value_{false};
  float default_value_{0.0f};
  ESPPreferenceObject pref_;
};

}  // namespace number
}  // namespace esphome
