#pragma once
#include <math.h>
#include <string>
#include <optional>
#include <vector>
#include "Arduino.h"

#include "esphome/components/binary_sensor/binary_sensor.h"
#include "esphome/components/sensor/sensor.h"
#include "esphome/components/text_sensor/text_sensor.h"
#include "esphome/core/application.h"
#include "esphome/core/component.h"
#include "esphome/core/log.h"
#include "esphome/components/api/custom_api_device.h"
#include "../vl53l1x/vl53l1x.h"
#include "esphome/core/preferences.h"
#include "orientation.h"
#include "zone.h"

class AsyncWebServer;
class AsyncWebServerRequest;

using namespace esphome::vl53l1x;
using TofSensor = esphome::vl53l1x::VL53L1X;

namespace esphome {
namespace roode {
#define NOBODY 0
#define SOMEONE 1
#define VERSION "1.6.6"
static const char *const TAG = "Roode";
static const char *const SETUP = "Setup";
static const char *const CALIBRATION = "Sensor Calibration";

/*
Use the VL53L1X_SetTimingBudget function to set the TB in milliseconds. The TB
values available are [15, 20, 33, 50, 100, 200, 500]. This function must be
called after VL53L1X_SetDistanceMode. Note: 15 ms only works with Short distance
mode. 100 ms is the default value. The TB can be adjusted to improve the
standard deviation (SD) of the measurement. Increasing the TB, decreases the SD
but increases the power consumption.
*/

static int delay_between_measurements = 0;
static int time_budget_in_ms = 0;

/*
Parameters which define the time between two different measurements in various
modes (https://www.st.com/resource/en/datasheet/vl53l1x.pdf) The timing budget
and inter-measurement period should not be called when the sensor is ranging.
The user has to stop the ranging, change these parameters, and restart ranging
The minimum inter-measurement period must be longer than the timing budget + 4
ms.
// Lowest possible is 15ms with the ULD API
(https://www.st.com/resource/en/user_manual/um2510-a-guide-to-using-the-vl53l1x-ultra-lite-driver-stmicroelectronics.pdf)
Valid values: [15,20,33,50,100,200,500]
*/
static int time_budget_in_ms_short = 15;  // max range: 1.3m
static int time_budget_in_ms_medium = 33;
static int time_budget_in_ms_medium_long = 50;
static int time_budget_in_ms_long = 100;
static int time_budget_in_ms_max = 200;  // max range: 4m

struct RecommendedSettings {
  ROI entry_roi;
  ROI exit_roi;
  uint16_t entry_threshold_min;
  uint16_t entry_threshold_max;
  uint16_t exit_threshold_min;
  uint16_t exit_threshold_max;
  uint8_t samples;
  std::string firmware;
  std::string ranging_mode;
};

class Roode : public PollingComponent, public api::CustomAPIDevice {
 public:
  Roode() { instance_ = this; }
  void setup() override;
  void update() override;
  void loop() override;
  void dump_config() override;
  ~Roode();
  /** Roode uses data from sensors */
  float get_setup_priority() const override { return setup_priority::AFTER_WIFI - 1.0f; };

  TofSensor *get_tof_sensor() { return this->distanceSensor; }
  void set_tof_sensor(TofSensor *sensor) { this->distanceSensor = sensor; }
  void set_invert_direction(bool dir) { invert_direction_ = dir; }
  void set_orientation(Orientation val) { orientation_ = val; }
  void set_sampling_size(uint8_t size) {
    samples = size;
    entry->set_max_samples(size);
    exit->set_max_samples(size);
  }
  void set_distance_entry(sensor::Sensor *distance_entry_) { distance_entry = distance_entry_; }
  void set_distance_exit(sensor::Sensor *distance_exit_) { distance_exit = distance_exit_; }
  void set_people_counter(number::Number *counter) { this->people_counter = counter; }
  void set_max_threshold_entry_sensor(sensor::Sensor *max_threshold_entry_sensor_) {
    max_threshold_entry_sensor = max_threshold_entry_sensor_;
  }
  void set_max_threshold_exit_sensor(sensor::Sensor *max_threshold_exit_sensor_) {
    max_threshold_exit_sensor = max_threshold_exit_sensor_;
  }
  void set_min_threshold_entry_sensor(sensor::Sensor *min_threshold_entry_sensor_) {
    min_threshold_entry_sensor = min_threshold_entry_sensor_;
  }
  void set_min_threshold_exit_sensor(sensor::Sensor *min_threshold_exit_sensor_) {
    min_threshold_exit_sensor = min_threshold_exit_sensor_;
  }
  void set_entry_roi_height_sensor(sensor::Sensor *roi_height_sensor_) { entry_roi_height_sensor = roi_height_sensor_; }
  void set_entry_roi_width_sensor(sensor::Sensor *roi_width_sensor_) { entry_roi_width_sensor = roi_width_sensor_; }
  void set_exit_roi_height_sensor(sensor::Sensor *roi_height_sensor_) { exit_roi_height_sensor = roi_height_sensor_; }
  void set_exit_roi_width_sensor(sensor::Sensor *roi_width_sensor_) { exit_roi_width_sensor = roi_width_sensor_; }
  void set_sensor_status_sensor(sensor::Sensor *status_sensor_) { status_sensor = status_sensor_; }
  void set_loop_time_sensor(sensor::Sensor *sens) { loop_time_sensor = sens; }
  void set_cpu_usage_sensor(sensor::Sensor *sens) { cpu_usage_sensor = sens; }
  void set_ram_free_sensor(sensor::Sensor *sens) { ram_free_sensor = sens; }
  void set_flash_free_sensor(sensor::Sensor *sens) { flash_free_sensor = sens; }
  void set_presence_sensor_binary_sensor(binary_sensor::BinarySensor *presence_sensor_) {
    presence_sensor = presence_sensor_;
  }
  void set_version_text_sensor(text_sensor::TextSensor *version_sensor_) { version_sensor = version_sensor_; }
  void set_entry_exit_event_text_sensor(text_sensor::TextSensor *entry_exit_event_sensor_) {
    entry_exit_event_sensor = entry_exit_event_sensor_;
  }
  void set_xshut_state_binary_sensor(binary_sensor::BinarySensor *sens) { xshut_state_binary_sensor = sens; }
  void set_sensor_xshut_state_binary_sensor(binary_sensor::BinarySensor *sens) { xshut_state_binary_sensor = sens; }
  void set_interrupt_status_sensor(sensor::Sensor *sens) { interrupt_status_sensor = sens; }
  void set_enabled_features_text_sensor(text_sensor::TextSensor *sensor_) { enabled_features_sensor = sensor_; }
  void set_sensor_status_text_sensor(text_sensor::TextSensor *sensor_) { status_text_sensor = sensor_; }
  void set_manual_adjustment_sensor(sensor::Sensor *sens) { manual_adjustment_sensor = sens; }
  void set_variance_cv_mask_sensor(sensor::Sensor *sens) { variance_cv_mask_sensor = sens; }
  void set_trial_bump_cv_sensor(sensor::Sensor *sens) { trial_bump_cv_sensor = sens; }
  void set_scan_time_cap_seconds_sensor(sensor::Sensor *sens) { scan_time_cap_seconds_sensor = sens; }
  void set_log_fallback_events(bool val) { log_fallback_events_ = val; }
  void set_force_single_core(bool val) { force_single_core_ = val; }
  void set_calibration_persistence(bool val) { calibration_persistence_ = val; }
  void set_auto_calibration_interval_sec(uint32_t sec);
  void set_filter_mode(FilterMode mode) {
    filter_mode_ = mode;
    default_filter_mode_ = mode;
    entry->set_filter_mode(mode);
    exit->set_filter_mode(mode);
  }
  void set_filter_window(uint8_t window) {
    filter_window_ = window;
    default_filter_window_ = window;
    entry->set_filter_window(window);
    exit->set_filter_window(window);
  }
  void set_invalid_distance_limit(uint8_t limit) { invalid_distance_limit_ = limit; }
  void set_restart_timeout(uint32_t ms) { restart_timeout_ms_ = ms; }
  void set_trial_bump_cv(float cv) { trial_bump_cv_ = cv; }
  void set_scan_time_cap_seconds(float sec) { scan_time_cap_seconds_ = sec; }
  void set_cpu_optimization_thresholds(float activate, float deactivate) {
    cpu_opt_activate_threshold_ = activate;
    cpu_opt_deactivate_threshold_ = deactivate;
  }
  void run_zone_calibration(uint8_t zone_id);
  void recalibration();
  void set_entry_threshold_percentages(uint8_t min, uint8_t max) { entry->set_threshold_percentages(min, max); }
  void set_exit_threshold_percentages(uint8_t min, uint8_t max) { exit->set_threshold_percentages(min, max); }
  void apply_cpu_optimizations(float cpu);
  void reset_cpu_optimizations(float cpu);
  void update_metrics();
  void start_passive_scan();
  void complete_calibration();
  Zone *entry = new Zone(0);
  Zone *exit = new Zone(1);
  static void log_event(const std::string &msg);

  bool apply_recommended_settings();
  void set_portal_password(const std::string &password) { portal_password_ = password; }
  void set_web_username(const std::string &username) { web_username_ = username; }
  void set_web_password(const std::string &password) { web_password_ = password; }

 protected:
  TofSensor *distanceSensor;
  Zone *current_zone = entry;
  sensor::Sensor *distance_entry{nullptr};
  sensor::Sensor *distance_exit{nullptr};
  number::Number *people_counter{nullptr};
  sensor::Sensor *max_threshold_entry_sensor{nullptr};
  sensor::Sensor *max_threshold_exit_sensor{nullptr};
  sensor::Sensor *min_threshold_entry_sensor{nullptr};
  sensor::Sensor *min_threshold_exit_sensor{nullptr};
  sensor::Sensor *exit_roi_height_sensor{nullptr};
  sensor::Sensor *exit_roi_width_sensor{nullptr};
  sensor::Sensor *entry_roi_height_sensor{nullptr};
  sensor::Sensor *entry_roi_width_sensor{nullptr};
  sensor::Sensor *status_sensor{nullptr};
  sensor::Sensor *loop_time_sensor{nullptr};
  sensor::Sensor *cpu_usage_sensor{nullptr};
  sensor::Sensor *ram_free_sensor{nullptr};
  sensor::Sensor *flash_free_sensor{nullptr};
  binary_sensor::BinarySensor *presence_sensor{nullptr};
  binary_sensor::BinarySensor *xshut_state_binary_sensor{nullptr};
  text_sensor::TextSensor *version_sensor{nullptr};
  text_sensor::TextSensor *entry_exit_event_sensor{nullptr};
  text_sensor::TextSensor *enabled_features_sensor{nullptr};
  text_sensor::TextSensor *status_text_sensor{nullptr};
  sensor::Sensor *manual_adjustment_sensor{nullptr};
  sensor::Sensor *interrupt_status_sensor{nullptr};
  sensor::Sensor *variance_cv_mask_sensor{nullptr};
  sensor::Sensor *trial_bump_cv_sensor{nullptr};
  sensor::Sensor *scan_time_cap_seconds_sensor{nullptr};

  void register_server_endpoints();
  bool api_registered_{false};
  std::string portal_password_{};
  AsyncWebServer *portal_server_{nullptr};
  std::string web_username_{};
  std::string web_password_{};
  bool check_token_(AsyncWebServerRequest *request);

  struct CalibrationPrefs {
    uint16_t baseline_mm;
    uint16_t threshold_min_mm;
    uint16_t threshold_max_mm;
    uint32_t last_calibrated_sec;  // monotonic seconds since boot
  };
  CalibrationPrefs calibration_data_[2];
  ESPPreferenceObject calibration_prefs_[2];
  bool calibration_persistence_{false};
  bool fail_safe_triggered_{false};
  uint32_t last_calibration_sec_{0};  // monotonic seconds since boot
  uint32_t auto_calibration_interval_sec_{4 * 60 * 60};

  FilterMode filter_mode_{FILTER_MIN};
  uint8_t filter_window_{5};
  FilterMode default_filter_mode_{FILTER_MIN};
  uint8_t default_filter_window_{5};

  bool cpu_optimizations_active_{false};
  uint16_t polling_interval_ms_{10};
  float cpu_opt_activate_threshold_{90.0f};
  float cpu_opt_deactivate_threshold_{50.0f};

  static bool log_fallback_events_;
  static Roode *instance_;
  int manual_adjustment_count_{0};
  uint32_t scan_start_ts_{0};
  uint32_t scan_record_count_{0};
  std::string scan_session_id_{};
  int scan_step_{0};
  int scan_total_steps_{0};
  float scan_progress_{0.0f};
  std::optional<RecommendedSettings> recommended_settings_{};
  float trial_bump_cv_{20.0f};
  float scan_time_cap_seconds_{90.0f};

  void publish_scan_record(const std::string &payload);
  float expected_counter_{0};
  bool force_single_core_{false};
  TaskHandle_t sensor_task_handle_{nullptr};
  uint8_t multicore_retry_count_{0};

  enum FSMState { STATE_IDLE, STATE_ENTRY_ACTIVE, STATE_BOTH_ACTIVE };
  FSMState state_{STATE_IDLE};
  uint32_t state_started_ts{0};

  unsigned long last_valid_crossing_ts_{0};
  unsigned long zone_triggered_start_[2]{0, 0};

  std::string last_status_text_{};

  VL53L1_Error last_sensor_status = VL53L1_ERROR_NONE;
  VL53L1_Error sensor_status = VL53L1_ERROR_NONE;
  void path_tracking(Zone *zone);
  bool handle_sensor_status();
  void update_status_text(const std::string &status);
  void calibrateDistance();
  void calibrate_zones();
  void publish_feature_list();
  const RangingMode *determine_ranging_mode(uint16_t average_entry_zone_distance, uint16_t average_exit_zone_distance);
  void publish_sensor_configuration(Zone *entry, Zone *exit, bool isMax);
  void updateCounter(int delta);
  Orientation orientation_{Parallel};
  uint8_t samples{2};
  bool invert_direction_{false};
  int number_attempts = 20;  // TO DO: make this configurable
  int short_distance_threshold = 1300;
  int medium_distance_threshold = 2000;
  int medium_long_distance_threshold = 2700;
  int long_distance_threshold = 3400;
  uint32_t loop_window_start_{0};
  uint64_t loop_time_sum_{0};
  uint32_t loop_count_{0};
  uint32_t last_loop_update_ts_{0};
  uint32_t last_sensor_restart_ts_{0};
  uint32_t restart_timeout_ms_{30000};
  uint8_t invalid_distance_limit_{10};
  uint8_t invalid_read_count_{0};
  uint8_t restart_attempt_count_{0};
  uint8_t max_restart_attempts_{3};
  static void sensor_task(void *param);
  bool use_sensor_task_{false};
  void restart_sensor();

  static constexpr uint8_t MAX_SCAN_SESSIONS = 5;
  static constexpr size_t MAX_SESSION_DATA = 1024;
  struct ScanSession {
    uint32_t id;
    uint32_t timestamp;
    uint16_t trials;
    float duration;
    uint32_t size;
    char data[MAX_SESSION_DATA];
  };
  ESPPreferenceObject session_prefs_[MAX_SCAN_SESSIONS];
  ESPPreferenceObject session_index_pref_;
  std::vector<ScanSession> sessions_;
  uint8_t session_next_{0};
  std::string current_session_blob_;
  void save_current_scan_session();
};

}  // namespace roode
}  // namespace esphome
